--- a/src/main/resources/com/example/demo12/elementyzamowienia.fxml
+++ b/src/main/resources/com/example/demo12/elementyzamowienia.fxml
@@ -56,7 +56,7 @@
                                         <TextField fx:id="txtProdId" layoutX="133.0" layoutY="95.0" />
                                         <TextField fx:id="txtIlosc" layoutX="133.0" layoutY="120.0" />
                                         <TextField fx:id="txtCenaElem" layoutX="133.0" layoutY="145.0" />
-                                        <TextField fx:id="txtWaluta" layoutX="133.0" layoutY="172.0" />
+                                        <TextField fx:id="txtWaluta" layoutX="133.0" layoutY="172.0" AnchorPane.topAnchor="170.0" />
                                         <Text layoutX="59.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ID Produktu" />
                                         <Text layoutX="98.0" layoutY="137.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ilość" />
                                         <Text layoutX="44.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cena elementu" />
@@ -76,7 +76,7 @@
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="536.0" prefWidth="740.0">
                     <children>
-                        <TableView fx:id="Table" layoutY="96.0" prefHeight="467.0" prefWidth="733.0">
+                        <TableView fx:id="Table" layoutY="96.0" prefHeight="467.0" prefWidth="733.0" AnchorPane.topAnchor="121.0">
                             <columns>
                                 <TableColumn fx:id="colzam_id" prefWidth="75.0" text="zam_id" />
                                 <TableColumn fx:id="colzam_numer" prefWidth="75.0" text="zam_numer" />
@@ -100,6 +100,13 @@
                         <Button layoutX="274.0" layoutY="63.0" mnemonicParsing="false" onAction="#update" text="Aktualizuj" />
                         <Button layoutX="380.0" layoutY="63.0" mnemonicParsing="false" onAction="#delete" text="Usuń" />
                         <Button layoutX="464.0" layoutY="63.0" mnemonicParsing="false" onAction="#searchAll" text="Pokaż wszystko" />
+                  <TextField fx:id="txtIdZamowieniasearch" layoutY="96.0" onAction="#advencedsearchZam_id" prefHeight="25.0" prefWidth="75.0" AnchorPane.leftAnchor="0.0" />
+                  <TextField fx:id="txtNumZamowieniasearch" layoutX="74.0" layoutY="96.0" onAction="#advencedsearchZam_elem" prefHeight="25.0" prefWidth="75.0" AnchorPane.leftAnchor="75.0" />
+                  <TextField fx:id="txtElemZamowieniasearch" layoutX="149.0" layoutY="96.0" onAction="#advencedsearchZam_elem" prefHeight="25.0" prefWidth="75.0" AnchorPane.leftAnchor="150.0" />
+                  <TextField fx:id="txtIdProduktusearch" layoutX="224.0" layoutY="96.0" onAction="#advencedsearchProd_id" prefHeight="25.0" prefWidth="75.0" AnchorPane.leftAnchor="225.0" />
+                  <TextField fx:id="txtIloscsearch" layoutX="299.0" layoutY="96.0" onAction="#advencedsearchIlosc" prefHeight="25.0" prefWidth="75.0" AnchorPane.leftAnchor="300.0" />
+                  <TextField fx:id="txtCenaElemsearch" layoutX="380.0" layoutY="96.0" onAction="#advencedsearchCena_elem" prefHeight="25.0" prefWidth="78.0" AnchorPane.leftAnchor="375.0" />
+                  <TextField fx:id="txtwalutasearch" layoutX="452.0" layoutY="96.0" onAction="#advencedsearchWaluta" prefHeight="25.0" prefWidth="90.0" AnchorPane.leftAnchor="453.0" />
                     </children></AnchorPane>
             </items>
         </SplitPane>
