--- a/src/main/resources/com/example/demo12/elementyzamowienia.fxml
+++ b/src/main/resources/com/example/demo12/elementyzamowienia.fxml
@@ -67,7 +67,7 @@
                                             </font>
                                         </Text>
                                         <Button layoutX="128.0" layoutY="210.0" mnemonicParsing="false" onAction="#dodaj" text="Dodaj element zamówienia" />
-                                        <TextArea fx:id="resultConsole" layoutX="12.0" layoutY="341.0" prefHeight="37.0" prefWidth="285.0" />
+                                        <TextArea fx:id="resultConsole" layoutX="12.0" layoutY="341.0" prefHeight="100.0" prefWidth="285.0" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="317.0" />
                                     </children>
                                 </AnchorPane>
                             </children>
