--- a/src/main/resources/com/example/demo12/zamowienia.fxml
+++ b/src/main/resources/com/example/demo12/zamowienia.fxml
@@ -59,7 +59,7 @@
                                             </font>
                                         </Text>
                                         <Button layoutX="151.0" layoutY="111.0" mnemonicParsing="false" onAction="#dodaj" text="Dodaj zamówienie" />
-                                        <TextArea fx:id="resultConsole" layoutX="12.0" layoutY="341.0" prefHeight="37.0" prefWidth="285.0" />
+                                        <TextArea fx:id="resultConsole" layoutX="12.0" layoutY="341.0" prefHeight="100.0" prefWidth="285.0" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="317.0" />
                                     </children>
                                 </AnchorPane>
                             </children>
