--- a/src/main/resources/com/example/demo12/klienci.fxml
+++ b/src/main/resources/com/example/demo12/klienci.fxml
@@ -69,7 +69,7 @@
                                  </font>
                               </Text>
                               <Button layoutX="165.0" layoutY="235.0" mnemonicParsing="false" onAction="#dodajKlienta" text="Dodaj klienta" />
-                              <TextArea fx:id="resultConsole" layoutX="12.0" layoutY="341.0" prefHeight="100.0" prefWidth="285.0" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="317.0" />
+                              <TextArea fx:id="resultConsole" layoutX="12.0" layoutY="341.0" prefHeight="100.0" prefWidth="285.0" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="317.0" />
                            </children>
                         </AnchorPane>
                      </children>
